# cv_burningship

./: .gitignore  CMakeLists.txt  README.md  app.rb  main.cpp
